--- a/contoh.html
+++ b/contoh.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>jancok</title>
 </head>
 <body>
-    
+   <h1> kyara faak u</h1> 
 </body>
 </html>
