--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
     </div>
   </div>
 
-
+<!--Footer-->
 <!-- Sosial Media & Copyright Section -->
 <div class="social flex justify-center items-center flex-col mt-4">
   <!-- Phone Number with Icon -->
