--- a/index.html
+++ b/index.html
@@ -521,37 +521,73 @@
     </div>
   </div>
 
-<!--Footer-->
-<!-- Sosial Media & Copyright Section -->
-<div class="social flex justify-center items-center flex-col mt-4">
-  <!-- Phone Number with Icon -->
-  <div class="flex items-center space-x-2 text-white mb-1">
-    <i data-feather="phone" class="text-xl"></i>
-    <h7 class="text-center text-white">+62-888-666-555</h7>
-  </div>
 
-  <!-- Sosial Media Icon -->
-  <div class="max-w-screen-xl mt-1 mx-auto text-center py-2 mt-1 border-t border-gray-600">
-    <div class="flex justify-center space-x-6">
-      <a href="https://instagram.com" class="text-2xl text-white hover:text-pink-600 transition duration-300">
-        <i data-feather="instagram"></i>
-      </a>
-      <a href="https://twitter.com" class="text-2xl text-white hover:text-blue-500 transition duration-300">
-        <i data-feather="twitter"></i>
-      </a>
-      <a href="https://facebook.com" class="text-2xl text-white hover:text-blue-700 transition duration-300">
-        <i data-feather="facebook"></i>
-      </a>
+  <footer class="bg-lime-950 text-white py-10">
+    <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
+      <!-- Logo and Tagline -->
+      <div class="col-span-1">
+        <h2 class="text-2xl font-bold mb-2">Betawi Muda Farm</h2>
+        <p class="text-sm">Simply #1 Farm Fresh Products</p>
+      </div>
+  
+      <!-- Quick Links -->
+      <div class="col-span-1">
+        <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
+        <ul class="space-y-2">
+          <li><a href="#" class="hover:underline">Home</a></li>
+          <li><a href="#" class="hover:underline">Blog</a></li>
+          <li><a href="#" class="hover:underline">List Layout</a></li>
+          <li><a href="#" class="hover:underline">Contact</a></li>
+        </ul>
+      </div>
+  
+      <!-- Contact Info -->
+      <div class="col-span-1">
+        <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
+        <ul class="space-y-2">
+          <li><i data-feather="map-pin" class="inline-block mr-2"></i>123 Farm Road, Green City</li>
+          <li><i data-feather="phone" class="inline-block mr-2"></i>+62-888-666-555</li>
+          <li><i data-feather="mail" class="inline-block mr-2"></i>info@betawimudafarm.com</li>
+        </ul>
+      </div>
+  
+      <!-- Cek Resi -->
+      <div class="col-span-1">
+        <h3 class="text-lg font-semibold mb-4">Cek Resi</h3>
+        <form action="/cek-resi" method="GET" class="space-y-4">
+          <input
+            type="text"
+            name="resi"
+            placeholder="Contoh: JNE1234567890"
+            class="w-full px-4 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-500"
+            required
+          />
+          <button
+            type="submit"
+            class="w-full bg-green-600 text-white px-6 py-2 rounded hover:bg-green-700 transition duration-300"
+          >
+            Cek Resi
+          </button>
+        </form>
+      </div>
     </div>
-    <div class="copyright text-white mt-4 py-2">&copy; 2024 Betawi Muda Farm</div>
-  </div>
-</div>
-
-<script src="https://unpkg.com/feather-icons"></script>
-
-<script>
-  feather.replace();
-</script>
+  
+    <!-- Footer Bottom -->
+    <div class="mt-10 border-t border-gray-700 pt-4 text-center">
+      <div class="flex justify-center space-x-6 mb-4">
+        <a href="#" class="text-white hover:text-gray-400"><i data-feather="facebook"></i></a>
+        <a href="#" class="text-white hover:text-gray-400"><i data-feather="twitter"></i></a>
+        <a href="#" class="text-white hover:text-gray-400"><i data-feather="instagram"></i></a>
+        <a href="#" class="text-white hover:text-gray-400"><i data-feather="linkedin"></i></a>
+      </div>
+      <p class="text-sm">&copy; 2024 Betawi Muda Farm. All Rights Reserved.</p>
+    </div>
+  </footer>
+  
+  <script src="https://unpkg.com/feather-icons"></script>
+  <script>
+    feather.replace();
+  </script>
 
 
 <script src="script3.js"></script>   
