--- a/index.html
+++ b/index.html
@@ -436,11 +436,11 @@
       <form id="cekResiForm">
         <div class="mb-4">
           <label for="resi" class="block text-sm font-medium">Masukkan Nomor Resi</label>
-          <input type="text" id="resi" name="resi" class="w-full p-3 mt-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary" placeholder="Contoh: JNE1234567890" required>
+          <input type="text" id="resi" name="resi" class="w-full p-3 mt-2 bg-lime-100 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-lime-950" placeholder="Contoh: JNE1234567890" required>
         </div>
         <div class="mb-4">
           <label for="courier" class="block text-sm font-medium">Pilih Kurir</label>
-          <select id="courier" name="courier" class="w-full p-3 mt-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary">
+          <select id="courier" name="courier" class="w-full p-3 mt-2 bg-lime-100 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-lime-950">
             <option value="jne">JNE</option>
             <option value="pos">Pos Indonesia</option>
             <option value="tiki">TIKI</option>
@@ -448,7 +448,7 @@
             <option value="jnt">JNT</option>
           </select>
         </div>
-        <button type="submit" class="w-full bg-transparent text-lime-800 font-semibold border-4 border-lime-800 p-3 rounded-lg hover:bg-lime-950 hover:text-white transition duration-300">Cek Status Resi</button>
+        <button type="submit" class="w-full bg-transparent text-lime-950 font-semibold border-4 border-lime-800 p-3 rounded-lg hover:bg-lime-950 hover:text-white transition duration-300">Cek Status Resi</button>
       </form>
     </div>
 
@@ -483,23 +483,23 @@
     <!-- Kontak & Alamat Section -->
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mt-8">
       <!-- Contact Form Section -->
-      <div class="kontak p-8 bg-gray-50 rounded-lg shadow-md">
+      <div class="kontak p-8 bg-gr-50 rounded-lg shadow-md">
         <h6 class="text-lg font-semibold text-gray-800 mb-4">Kontak</h6>
         <p class="text-gray-600 mb-6">Silakan isi form dibawah ini untuk menghubungi kami:</p>
         <form action="">
           <div class="grid grid-cols-1 gap-6 mb-6">
             <div>
               <label for="name" class="block text-gray-700">Nama</label>
-              <input id="name" type="text" placeholder="Full Name" class="w-full p-3 mt-2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+              <input id="name" type="text" placeholder="Full Name" class="w-full p-3 mt-2 bg-lime-100 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-lime-950">
             </div>
             <div>
               <label for="email" class="block text-gray-700">Email</label>
-              <input id="email" type="email" placeholder="Email" class="w-full p-3 mt-2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+              <input id="email" type="email" placeholder="Email" class="w-full p-3 mt-2 bg-lime-100 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-lime-950">
             </div>
           </div>
           <div class="mb-6">
             <label for="message" class="block text-gray-700">Pesan Anda</label>
-            <textarea id="message" rows="6" placeholder="Your Message" class="w-full p-3 mt-2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
+            <textarea id="message" rows="6" placeholder="Your Message" class="w-full p-3 mt-2 bg-lime-100 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-lime-950"></textarea>
           </div>
           <button type="submit" onclick="sendToWhatsapp()" class="bg-transparent text-lime-950 font-semibold border-4 border-lime-950 py-3 px-8 rounded-md hover:bg-lime-950 hover:text-white focus:outline-none focus:ring-2 focus:ring-lime-900">
             Kirim
