--- a/index1.html
+++ b/index1.html
@@ -46,24 +46,25 @@
     </div>
 
           <!--Bagian Popup Billing -->
-    <div class="popup-billing" id="popup-billing">
-        <div class="popup-content">
-            <h2>Detail Pembelian <br>BETAWI MUDA FARM</h2> <br>
-            <ul id="product-list"></ul>
-            <span>==========================</span>
-            <div class="info">
-            <div><strong>Total Harga: </strong><span id="total-price"></span></div>
-            <div><strong>Status Pembayaran: </strong><span id="payment-status">Lunas</span></div>
-            <div><strong>No Resi: </strong><span id="resi-number">582230008329223</span></div>
+          <div class="popup-billing" id="popup-billing">
+            <div class="popup-content">
+                <h2>Detail Pembelian <br>BETAWI MUDA FARM</h2> <br>
+                <ul id="product-list"></ul>
+                <span>==========================</span>
+                <div class="info">
+                <div><strong>Total Harga: </strong><span id="total-price"></span></div>
+                <div><strong>Status Pembayaran:</strong><span id="payment-status">Lunas</span></div>
+                <div><strong>Jasa Pengiriman: </strong><span id="courier-status">JNT CARGO</span></div>
+                <div><strong>No Resi: </strong><span id="resi-number">582230008329223</span></div>
+            </div>
+            <div class="popup-buttons">
+                <button id="close-popup" style="background-color: red;">Tutup</button>
+                <button id="print-popup" style="background-color: blue;">Print</button>
+                <button id="history-button" style="background-color: rgb(156, 156, 32);">Riwayat</button>
+                <button id="save-button">Simpan</button>
+            </div>
+            </div>
         </div>
-        <div class="popup-buttons">
-            <button id="close-popup" style="background-color: red;">Tutup</button>
-            <button id="print-popup" style="background-color: blue;">Print</button>
-            <button id="history-button" style="background-color: rgb(156, 156, 32);">Riwayat</button>
-            <button id="save-button">Simpan</button>
-        </div>
-        </div>
-    </div>
     <script src="script3.js"></script>
 </body>
 </html>
