--- a/index1.html
+++ b/index1.html
@@ -55,7 +55,7 @@
                 <div><strong>Total Harga: </strong><span id="total-price"></span></div>
                 <div><strong>Status Pembayaran:</strong><span id="payment-status">Lunas</span></div>
                 <div><strong>Jasa Pengiriman: </strong><span id="courier-status">JNT CARGO</span></div>
-                <div><strong>No Resi: </strong><span id="resi-number">582230008329223</span></div>
+                <div><strong>No Resi: </strong><span id="resi-number">JP2255749628</span></div>
             </div>
             <div class="popup-buttons">
                 <button id="close-popup" style="background-color: red;">Tutup</button>
