--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
     <main>
 
       <section id="aboutus" class="bg-gradient-to-b from-lime-800 via-lime-900 to-lime-950 py-12 ">
-        <div class="layar-dalam">
+        <div class="layar-dalam max-w-screen-lg mx-auto px-6 sm:px-12 md:px-20">
           <h3 class="text-4xl text-center mb-6 text-green-50 font-semibold relative">
             About Us
             <span class="absolute bottom-0 left-1/2 transform -translate-x-1/2 border-b-4 border-green-50 w-24 mt-8"></span>
           </h3>
           
+          <div class="flex flex-col md:flex-row items-center gap-8 mt-8"></div>
           <p class="ringkasan italic text-lime-200 text-lg px-24 py-8 text-center">
             Membangun sektor pertanian dan peternakan bersama generasi muda Indonesia
           </p>
