--- a/index1.html
+++ b/index1.html
@@ -35,14 +35,12 @@
         <h1>PRODUCT</h1>
         <ul class="listCard">
         </ul>
-        <div class="bttn">
-            <div class="checkOut">
-                <div class="total">0</div>
-                <div class="closeShopping">CLOSE</div>
-            </div>
-            <div class="billing">
-                <div class="closeShopping">PEMBAYARAN</div>
-            </div>
+        <div class="footerCard"></div>
+    <span class="pricetotal">0</span>
+
+            <button class="checkOut">CLOSE</button>
+            <button class="billing">
+                PEMBAYARAN</button>
         </div>
     </div>
 
