--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     </header>
 
     <!-- Contact Form Section -->
-    <div class="max-w-2xl mx-auto bg-white p-8 rounded-lg shadow-lg">
+    <div class="max-w-2xl mx-auto bg-[#ebe8d7] p-8 rounded-lg shadow-lg">
       <h6 class="text-2xl font-semibold text-lime-800 mb-4 text-center">Kontak Kami</h6>
       <p class="text-gray-600 mb-6 text-center">
         Jika Anda memiliki pertanyaan atau membutuhkan bantuan, jangan ragu untuk menghubungi kami melalui formulir di bawah ini:
