edit fungsionalitas sosial media pada footer bottom

--- a/index.html
+++ b/index.html
@@ -528,17 +528,25 @@
     </div>
   </div>
 
- <!-- Footer Bottom -->
- <div class="mt-10 border-t border-gray-700 pt-4 text-center">
+<!-- Footer Bottom -->
+<div class="mt-10 border-t border-gray-700 pt-4 text-center">
   <div class="flex justify-center space-x-6 mb-4">
-    <a href="#" class="text-white hover:text-gray-400"><i data-feather="facebook"></i></a>
-    <a href="#" class="text-white hover:text-gray-400"><i data-feather="twitter"></i></a>
-    <a href="#" class="text-white hover:text-gray-400"><i data-feather="instagram"></i></a>
-    <a href="#" class="text-white hover:text-gray-400"><i data-feather="linkedin"></i></a>
+    <a href="https://www.facebook.com/BetawiMudaFarm" target="_blank" rel="noopener noreferrer" class="text-white hover:text-gray-400">
+      <i data-feather="facebook"></i>
+    </a>
+    <a href="https://twitter.com/BetawiMudaFarm" target="_blank" rel="noopener noreferrer" class="text-white hover:text-gray-400">
+      <i data-feather="twitter"></i>
+    </a>
+    <a href="https://www.instagram.com/BetawiMudaFarm" target="_blank" rel="noopener noreferrer" class="text-white hover:text-gray-400">
+      <i data-feather="instagram"></i>
+    </a>
+    <a href="https://www.linkedin.com/company/BetawiMudaFarm" target="_blank" rel="noopener noreferrer" class="text-white hover:text-gray-400">
+      <i data-feather="linkedin"></i>
+    </a>
   </div>
   <p class="text-sm">&copy; 2024 Betawi Muda Farm. All Rights Reserved.</p>
 </div>
-</footer>
+
 
 <script src="script3.js"></script>   
 <script src="script2.js"></script>     
