--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BETAWI MUDA FARM</title>
     <link rel="icon" href="asset/Betawi Muda.png"></link>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -79,7 +79,7 @@
 
     <main>
 
-      <section id="aboutus" class=" bg-green-50 py-12 ">
+      <section id="aboutus" class=" bg-gradient-to-b from-yellow-300 via-yellow-200 to-yellow-400  py-12 ">
         <div class="layar-dalam max-w-screen-lg mx-auto px-6 sm:px-12 md:px-20">
           <h3 class="text-4xl text-center mb-6 text-lime-950 font-semibold relative">
             About Us
