--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
 
     <main>
 
-      <section id="aboutus" class="bg-gradient-to-b from-yellow-300 via-yellow-200 to-yellow-400 py-12 ">
+      <section id="aboutus" class="bg-gradient-to-b from-yellow-300 via-yellow-200 to-yellow-400 py-12 "></section>
         <div class="layar-dalam">
-          <h3 class="text-4xl text-center mb-6 text-green-50 font-semibold relative">
+          <h3 class="text-4xl text-center mb-6 text-lime-950 font-semibold relative">
             About Us
-            <span class="absolute bottom-0 left-1/2 transform -translate-x-1/2 border-b-4 border-green-50 w-24 mt-8"></span>
+            <span class="absolute bottom-0 left-1/2 transform -translate-x-1/2 border-b-4 border-lime-950 w-24 mt-8"></span>
           </h3>
           
-          <p class="ringkasan italic text-lime-200 text-lg px-24 py-8 text-center">
-            Membangun sektor pertanian dan peternakan bersama generasi muda Indonesia
+          <p class="ringkasan italic text-lime-950 text-lg px-24 py-8 text-center">
+            "Membangun sektor pertanian dan peternakan bersama generasi muda Indonesia"
           </p>
           
           <div class="konten-isi">
-            <p class="text-20px leading-relaxed text-justify text-white px-6 sm:px-8 md:px-12">
+            <p class="text-20px leading-relaxed text-justify text-lime-950 px-6 sm:px-8 md:px-12">
               Betawi Muda Farm merupakan wadah yang dimana generasi muda dapat berkembang dan berkreasi dalam sektor pertanian maupun peternakan. 
               Dengan mengembangkan semangat jiwa generasi muda pada sektor Agrikultur yang sangat luas di Indonesia ini dan memanfaatkan setiap potensi yang bisa dikembangkan di Indonesia. 
               Betawi Muda farm juga bukan hanya memberikan informasi tentang agrikultur, kami juga menyediakan layanan, alat maupun jasa untuk membuat kebun anda menjadi lebih maju dan efisien 
@@ -101,9 +101,9 @@
 
       <section id="product" class="bg-gradient-to-b from-yellow-300 via-yellow-200 to-yellow-400 text-gray-800 pt-16 pb-16"></section>
         <div class="max-w-screen-xl mx-auto px-6">
-            <h3 class="text-4xl text-center mb-6 text-green-50 font-semibold relative">
+            <h3 class="text-4xl text-center mb-6 text-lime-950 font-semibold relative">
                 Product
-                <span class="absolute bottom-0 left-1/2 transform -translate-x-1/2 border-b-4  border-green-50 w-14 mt-4"></span>
+                <span class="absolute bottom-0 left-1/2 transform -translate-x-1/2 border-b-4  border-lime-950 w-14 mt-4"></span>
             </h3>
 
             <!-- Container for horizontal scrolling -->
