--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <main>
 
-      <section id="aboutus" class="bg-gradient-to-b from-lime-800 via-lime-900 to-lime-950 py-12 ">
+      <section id="aboutus" class="bg-lime-950 py-12 ">
         <div class="layar-dalam">
           <h3 class="text-4xl text-center mb-6 text-green-50 font-semibold relative">
             About Us
