Ubah nama fitur di contact us

--- a/index.html
+++ b/index.html
@@ -483,13 +483,13 @@
         </li>
         <li><a href="contact.html" 
           class="text-[#4f6c2f] hover:underline flex items-center"
-        ><i data-feather="phone" class="inline-block mr-2"></i>+62 852-8324-1926</a></li>
+        ><i data-feather="phone" class="inline-block mr-2"></i>Customer Service</a></li>
         <li class="email" >
           <a href="https://mail.google.com/mail/?view=cm&to=kevinkzmh@gmail.com" 
           target="_blank" 
           rel="noopener noreferrer" 
           class="text-[#4f6c2f] hover:underline flex items-center">
-            <i data-feather="mail" class="inline-block mr-2"></i>BetawiMudaFarm@gmail.com
+            <i data-feather="mail" class="inline-block mr-2"></i>Email
           </a>
       </li>
       
