--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body class="bg-gray-100 font-sans leading-normal tracking-normal flex items-center justify-center min-h-screen">
   <div class="container mx-auto px-4">
     <!-- Header -->
-    <header class="text-center mb-8">
+    <header class="text-center bg-[#e2dfca] mb-8">
       <a href="index.html" class="brand inline-flex items-center space-x-4">
         <img src="asset/Betawi Muda.png" alt="BETAWI MUDA FARM" class="logo w-20 h-20 md:w-24 md:h-24">
         <h1 class="title font-bold text-3xl md:text-4xl text-lime-800">BETAWI MUDA FARM</h1>
@@ -23,7 +23,7 @@
 
     <!-- Contact Form Section -->
     <div class="max-w-2xl mx-auto bg-[#ebe8d7] p-8 rounded-lg shadow-lg">
-      <h6 class="text-2xl font-semibold text-lime-800 mb-4 text-center">Kontak Kami</h6>
+      <h6 class="text-2xl font-semibold text-lime-800 mb-4 text-center">Customer Service</h6>
       <p class="text-gray-600 mb-6 text-center">
         Jika Anda memiliki pertanyaan atau membutuhkan bantuan, jangan ragu untuk menghubungi kami melalui formulir di bawah ini:
       </p>
