--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <!-- Header -->
     <header class="text-center bg-[#e2dfca] mb-8">
       <a href="index.html" class="brand inline-flex items-center space-x-4">
-        <img src="asset/Betawi Muda.png" alt="BETAWI MUDA FARM" class="logo w-20 h-20 md:w-24 md:h-24">
+        <img src="asset/Betawi_Muda-removebg-preview.png" alt="BETAWI MUDA FARM" class="logo w-20 h-20 md:w-24 md:h-24">
         <h1 class="title font-bold text-3xl md:text-4xl text-lime-800">BETAWI MUDA FARM</h1>
       </a>
     </header>
