--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 
 </head>
-<body class="bg-[#f5f5f4] shadow-md min-h-screen text-[#393716]">
+<body class="bar bg-[#f5f5f4] shadow-md min-h-screen text-[#393716]">
     <nav>
         <div class="menu">
         <ul class="sidebar">
